--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "emoji-picker-react": "^4.14.1",
     "iso-country-currency": "^0.7.2",
     "react": "^19.1.1",
+    "react-color": "^2.19.3",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.2",
+    "react-spinners": "^0.17.0",
     "styled-components": "^6.1.19",
+    "sweetalert2": "^11.26.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
