--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "dayjs": "^1.11.19",
     "emoji-picker-react": "^4.14.1",
     "iso-country-currency": "^0.7.2",
     "react": "^19.1.1",
