--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.5",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query-devtools": "^5.90.2",
     "dayjs": "^1.11.19",
