--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.9.2",
     "react-spinners": "^0.17.0",
     "styled-components": "^6.1.19",
