--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^7.3.5",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "chart.js": "^4.5.1",
     "dayjs": "^1.11.19",
     "emoji-picker-react": "^4.14.1",
     "iso-country-currency": "^0.7.2",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
